# api/bundled/openapi.json
@@ -1162,6 +1162,55 @@
         }
       }
     },
+    "/course/courses/{courseId}/draft": {
+      "post": {
+        "security": [
+          {
+            "course_Oauth2": [
+              "openid",
+              "entitlements"
+            ]
+          },
+          {
+            "course_OIDC": [
+              "openid",
+              "entitlements"
+            ]
+          }
+        ],
+        "tags": [
+          "Course"
+        ],
+        "summary": "Create draft version of a course",
+        "operationId": "createDraftVersion",
+        "description": "- authenticated:\n  - instructor\n  - admin\n",
+        "parameters": [
+          {
+            "$ref": "#/components/parameters/course_courseIdPath"
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Draft version created"
+          },
+          "400": {
+            "$ref": "#/components/responses/course_BadRequestError"
+          },
+          "401": {
+            "$ref": "#/components/responses/course_UnauthorizedError"
+          },
+          "403": {
+            "$ref": "#/components/responses/course_ForbiddenError"
+          },
+          "404": {
+            "$ref": "#/components/responses/course_NotFoundError"
+          },
+          "500": {
+            "$ref": "#/components/responses/course_InternalServerError"
+          }
+        }
+      }
+    },
     "/course/courses/{courseId}/finish": {
       "post": {
         "security": [
@@ -3119,6 +3168,13 @@
           "content": {
             "application/json": {
               "schema": {
+                "discriminator": {
+                  "propertyName": "lessonType",
+                  "mapping": {
+                    "video": "#/components/schemas/course_VideoLesson",
+                    "test": "#/components/schemas/course_TestLesson"
+                  }
+                },
                 "oneOf": [
                   {
                     "$ref": "#/components/schemas/course_VideoLesson"
